--- a/nhom5WebApp_LapTopShop/pom.xml
+++ b/nhom5WebApp_LapTopShop/pom.xml
@@ -88,6 +88,16 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>6.6.0.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
 
 	</dependencies>
 
